<resources>
    <string name="app_name">cookBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cookbook">CookBook</string>
    <string name="go_to_random_recipes">Go to random recipes</string>
    <string name="go_to_favorite_recipes">Go to favorite recipes</string>
    <string name="no_favorites_to_show">No favorites to show</string>
    <string name="search">search</string>
    <string name="search_recipes">Search recipes</string>
    <string name="ingredients">Ingredients:</string>
    <string name="no_search_results">No search results :(</string>
    <string name="similar_recipes">Similar recipes:</string>
    <string name="random_recipes">Random Recipes</string>
    <string name="search_recipes_top_header">Search Recipes</string>
    <string name="favorite_recipes">Favorite Recipes</string>
    <string name="ingredient_image">ingredient image</string>
    <string name="back_button">back button</string>
    <string name="recipe_image">recipe image</string>
    <string name="favorite_button">favorite button</string>
</resources>